--- a/1_Filtering and processing location data.qmd
+++ b/1_Filtering and processing location data.qmd
@@ -49,6 +49,7 @@ packages <- c(packages,"crawlUtils")
 
 # Packages loading
 invisible(lapply(packages, library, character.only = TRUE))
+write_csv(data.frame(packages=packages), "packages.csv")
 ```
 
 ### Read in telemetry data, filter locations by Argos location class, and remove grossly inaccurate positions
@@ -223,7 +224,7 @@ If you would would like to pause here and continue working later you should save
 
 ```{r}
 dir.create("processed_data")
-save(locs, land, vis_graph, packages, file="processed_data/clean_data.RData")
+save(locs, land, vis_graph, file="processed_data/clean_data.RData")
 ```
 
 Otherwise, you can continue with step 2 without saving.
