--- a/4_creating UDs.qmd
+++ b/4_creating UDs.qmd
@@ -11,6 +11,7 @@ If you previously stopped after step 3 and want to restart, you have to read in 
 
 ```{r}
 load("processed_data/predict_samples.RData")
+packages <- read.csv("packages.csv")$packages
 invisible(lapply(packages, library, character.only = TRUE))
 ```
 
@@ -132,5 +133,5 @@ ud_df %>% select(-data) %>% write_csv("processed_data/ud_df_nodata.csv")
 Change the end of the file name as appropriate
 
 ```{r}
-save(ud_df, land, file="processed_data/ud_df.RData")
+save(ud_df, land, packages, file="processed_data/ud_df.RData")
 ```
