--- a/2_Detect dispersal.qmd
+++ b/2_Detect dispersal.qmd
@@ -27,88 +27,110 @@ locs <- locs %>% group_by(deploy_id) %>% nest()
 
 ### Create table of migration start and stop dates
 
-First we will check if some animals have already been processed. This is indicated by the presence of the `stat_travel.csv` file in the `processed_data` directory. 
-```{r}
-if(file.exists("processed_data/stat_travel.csv")){
-  stat_travel <- read_csv("processed_data/stat_travel.csv") %>% 
-    group_by(deploy_id) %>% nest() %>% 
-    mutate(complete = 1)
-  stat_travel <- bind_rows(data.frame(deploy_id = locs$deploy_id[!locs$deploy_id%in%stat_travel$deploy_id]))
-} else{
-  stat_travel <- NULL
-  skip <- NULL
-}
-new_id <- c(1:nrow(locs))[!locs$deploy_id %in% skip]
-```
-
-Now we can estimate migration start and stop dates, if there are any, in each deployment. The workhorse function for this is `cu_migration_det()`. The arguments used here are `min_disp`, the minimum distance that can be considered a migration displacement, `min_phase_len`, the minimum number of days a phase (stationary or migration) can be, and `max_k` is the degrees of freedom used for fitting the dispersion function. 
+Now we can estimate migration start and stop dates, if there are any, in each deployment. The workhorse function for this is `cu_bout_det()`. The arguments used here are `min_disp`, the minimum distance that can be considered a migration displacement, `min_bout_len`, the minimum number of days a phase (stationary or migration) can be, and `max_k` is the degrees of freedom used for fitting the dispersion function. The higher `max_k` is, the finer grained the guess will be, i.e., it may not overshoot the start or the end of a bout as much. The default is `max_k = 100`
 
 ```{r}
 #| output: false
-migr_tbl <- foreach(i=new_id) %do% {
-  cu_migration_det(locs$data[[i]], min_disp=20, min_bout_len=3)
+stat_travel <- tibble(deploy_id = locs$deploy_id)
+stat_travel$bout_tbl <- foreach(i=1:nrow(locs)) %do% {
+  cu_bout_det(locs$data[[i]], min_disp=20, min_bout_len=3)
 }
 ```
 
-Now we export the best guess at the movement bouts. Then after plotting we can adjust the bout timing. We also add an initial guess about bouts that are actual migrations not just movement between stationary areas. 
-
-```{r}
-new_stat_travel <- tibble(deploy_id=locs$deploy_id[new_id], migr_tbl = migr_tbl) %>%
-  unnest(cols=migr_tbl) %>% mutate(
-    migration = ifelse(avg_disp_rate>=set_units(10,km/d), 1, 0),
-    start = as.character(start), end = as.character(end)
-  ) %>% select(-avg_disp_rate)
-
-stat_travel <- bind_rows(stat_travel, new_stat_travel) %>% arrange(deploy_id)
-
-write_csv(stat_travel, "processed_data/stat_travel.csv")
-
-```
-
-### Create dispersal plots for each animal
+Now we can make some plots to examine the accuracy of the bout start and end dates.
 
 ```{r}
 #| output: false
-dispersal_plt <- foreach(i=1:length(new_id)) %do% {
-  {cu_plot_disp(locs$data[[new_id[i]]], migr_tbl[[i]]) + ggtitle(paste0("ID:",locs$deploy_id[[new_id[i]]]))} %>% ggplotly()
+dispersal_plt <- foreach(i=1:nrow(stat_travel)) %do% {
+  {cu_plot_disp(locs$data[[i]], stat_travel$bout_tbl[[i]]) + ggtitle(paste0("ID:",locs$deploy_id[[i]], " / row: ", i))} %>% ggplotly()
 }
 ```
+
+
+
 
 ### Adjust `stat_travel.csv` file based on plots
 
+Next we will export the data to a new  `stat_travel.csv` file so that we can adjust the start and end times for the new animal bouts as necessary.  
 
-
-In the `migr_tbl` entries, for the `travel_evt`:
-0 = stationary bout(s)
-1 = travel (may or may not be full migration)
-
-After looking through the plots of all animals you may way to examine some more closely and change the dates for migration, etc. Or, you may want to delete some locations. First let's look at PTT 178536 (row 19).It looks like the animal started departing for migration sooner than the `cu_migration_det()` function detected it. So we use the `plotly` package to create an interactive plot so that we can get the dates that we want.
-
-If you hover over the points you will see that it looks like the animal began migration on August 23 rather than 25 as detected by the function. So we can change the date in the migration table then re-plot it. 
-
-
-If you want, you can just manually adjust the values in the `migr_tbl` list like so:
 ```{r}
-#| eval: false
-migr_tbl[[37]][1,]$end <- mdy("8/23/2022")
-migr_tbl[[37]][2,]$start <- mdy("8/23/2022")
+dispersal_plt
 ```
 
-Now, if we look at PTT 171222 (row 10) we can see that there are some irregularities with the data that we should remove after October 2017. So we can follow the same procedure
-
-
-## Join locations to movement phases for individual turtles
-
-If the migration phases are acceptable we can combine the phase information with the data to select the data we want in future analyses, e.g., remove nonmigratory data for space use analysis. 
+Upon examining the last plot, `dispersal_plt[[27]]`, for example we can see that the migration period lasts a little to long and should probably end on 11/4/2023. Looking that the bout table for that animal,
 ```{r}
-locs <- locs %>% rowwise() %>% mutate(
-data = list(cu_join_interval_tbl(data, migr_tbl))
-)
+stat_travel$bout_tbl[[27]]
 ```
+we can see that the auto detection function has the migration bout ending on 11/9/2023. We can simply change the start date of the next bout (bout number 2) to the appropriate value,
+```{r}
+stat_travel$bout_tbl[[27]]$start[2] <- as.Date("2023-11-04")
+```
+The last line of the bout table is the day after the last telemetry observation is observed. If you want to delete some data at the end, all you have to do is adjust that last `start` date. Now after examinging all the plots, we will make the following adjustments:
+```{r}
+# Animal 24
+stat_travel$bout_tbl[[24]]$start[2] <- as.Date("2023-08-27")
+stat_travel$bout_tbl[[24]]$start[3] <- as.Date("2023-10-17")
+## Animal 23
+stat_travel$bout_tbl[[23]]$start[2] <- as.Date("2023-09-24")
+## Animal 22
+stat_travel$bout_tbl[[22]]$start[2] <- as.Date("2022-05-31")
+stat_travel$bout_tbl[[22]]$start[3] <- as.Date("2022-06-03")
+stat_travel$bout_tbl[[22]]$start[4] <- as.Date("2022-07-11")
+## Animal 21
+stat_travel$bout_tbl[[21]]$travel[1] <- 1
+stat_travel$bout_tbl[[21]] <- stat_travel$bout_tbl[[21]][-2,]
+stat_travel$bout_tbl[[21]]$start[[2]] <- as.Date("2019-10-10")
+stat_travel$bout_tbl[[21]]$start[[3]] <- as.Date("2019-10-31")
+stat_travel$bout_tbl[[21]]$bout[1:4] <- 1:4
+## Animal 18
+stat_travel$bout_tbl[[18]]$start[[2]] <- as.Date("2019-07-23")
+## Animal 15
+stat_travel$bout_tbl[[15]]$travel[[1]] <- 0
+stat_travel$bout_tbl[[15]]$start[[1]] <- as.Date("2019-06-10")
+## Animal 14
+stat_travel$bout_tbl[[14]]$start[[2]] <- as.Date("2019-06-07")
+## Animal 11
+stat_travel$bout_tbl[[11]] <- stat_travel$bout_tbl[[11]][-1,]
+stat_travel$bout_tbl[[11]]$start[[1]] <- as.Date("2017-05-23")
+stat_travel$bout_tbl[[11]]$bout[[1]] <- 1
+## Animal 10
+stat_travel$bout_tbl[[10]] <- stat_travel$bout_tbl[[10]][-2,]
+stat_travel$bout_tbl[[10]]$start[[2]] <- as.Date("2017-10-11")
+## Animal 7
+stat_travel$bout_tbl[[7]]$start[2] <- as.Date("2017-09-09")
+## Animal 6
+stat_travel$bout_tbl[[6]]$start[2] <- as.Date("2019-06-09")
+## Animal 5
+stat_travel$bout_tbl[[5]]$start[2] <- as.Date("2019-03-09")
+## Animal 4
+stat_travel$bout_tbl[[4]] <- stat_travel$bout_tbl[[4]][-4,]
+stat_travel$bout_tbl[[4]]$start[2] <- as.Date("2016-08-24")
+stat_travel$bout_tbl[[4]]$start[3] <- as.Date("2016-10-09")
+## Animal 2
+stat_travel$bout_tbl[[2]] <- stat_travel$bout_tbl[[2]][-c(6:7),] 
+stat_travel$bout_tbl[[2]]$start[5] <- as.Date("2016-09-17")
+stat_travel$bout_tbl[[2]]$start[6] <- as.Date("2016-10-25")
+stat_travel$bout_tbl[[2]]$start[7] <- as.Date("2016-10-26")
+## Animal 1
+stat_travel$bout_tbl[[1]]$start[2] <- as.Date("2015-04-21")
+stat_travel$bout_tbl[[1]]$start[3] <- as.Date("2015-07-03")
+```
+
+Just to check we can replot the dispersion figures.
+
+```{r}
+#| output: false
+dispersal_plt <- foreach(i=1:nrow(stat_travel)) %do% {
+  {cu_plot_disp(locs$data[[i]], stat_travel$bout_tbl[[i]]) + ggtitle(paste0("ID:",locs$deploy_id[[i]], " / row: ", i))} %>% ggplotly()
+}
+
+dispersal_plt 
+```
+
 
 ### Save output for continuing later
 If you would would like to pause here and continue working later you should save the products so you don't have to repeat these steps.
 ```{r}
-save(locs, file="processed_data/migr_det_data.RData")
+save(stat_travel, file="processed_data/stat_travel.RData")
 ```
 Otherwise, you can continue with step 2 without saving.
